--- a/index.html
+++ b/index.html
@@ -35,13 +35,75 @@
                         <h1 class="sub-title">About Me</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         <div class="tab-titles">
-                            <p class="tab-links active-link">Skills</p>
-                            <p class="tab-links">Experience</p>
-                            <p class="tab-links">Education</p>
+                            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                            <p class="tab-links" onclick="opentab('education')">Education</p>
+                        </div>
+                        <div class="tab-contents active-tab" id="skills" >
+                            <ul>
+                                <li>
+                                    <span>UI/UX</span><br>
+                                    Designing Web App interfaces
+                                </li>
+                                <li>
+                                    <span>Web Development</span><br>
+                                    Designing Web App interfaces
+                                </li>
+                                <li>
+                                    <span>App Development</span><br>
+                                    Designing Web App interfaces
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="experience" >
+                            <ul>
+                                <li>
+                                    <span>2021 - Current</span><br>
+                                    UI/UX Design Training at ET Institute
+                                </li>
+                                <li>
+                                    <span>2019-2021</span><br>
+                                    Team Lead at StarApp LLC.
+                                </li>
+                                <li>
+                                    <span>2017-2019</span><br>
+                                    UI/UX Designer at Coin Digital Ltd.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="education" >
+                            <ul>
+                                <li>
+                                    <span>2016</span><br>
+                                    Trainee at ET Institute
+                                </li>
+                                <li>
+                                    <span>2016</span><br>
+                                    MBA IIM Bangalore
+                                </li>
+                                <li>
+                                    <span>2014</span><br>
+                                    BBA ISM Bangalore
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+    <script>
+        var tablinks = document.getElementsByClassName("tab-links");
+        var tabcontents = document.getElementsByClassName("tab-contents");
+        function opentab(tabname){
+            for(tablink of tablinks){
+                tablink.classList.remove("active-link")
+            }
+            for(tabcontent of tabcontents){
+                tabcontent.classList.remove("active-tab")
+            }
+        }
+
+    </script>
     </body>
 </html>
