--- a/index.html
+++ b/index.html
@@ -121,6 +121,39 @@
             </div>
         </div>
     </div>
+
+    <!-- Portfolio -->
+     <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="./assets/image2.jpg" alt="">
+                    <div class="layer">
+                        <h3>Social Media App</h3>
+                        <p> The app connects you to the talented around the world. Download it now.</p>
+                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="./assets/image3.jpg" alt="">
+                    <div class="layer">
+                        <h3>Music App</h3>
+                        <p> The app connects you to the Music around the world. Download it now.</p>
+                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="./assets/image5.jpg" alt="">
+                    <div class="layer">
+                        <h3>Online Shopping App</h3>
+                        <p> The app connects you to the shopping around the world. Download it now.</p>
+                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>        
+     </div>
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
