Portfolio4 One Ten

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                     </div>
                 </div>
             </div>
+            <a href="#" class="btn">See more</a>
         </div>        
      </div>
     <script>
