--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="https://kit.fontawesome.com/7480c2d2ee.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <!-- Header -->
         <div id="header">
             <nav>
                 <img src="assets/image5.jpg" class="logo" alt="">
@@ -94,67 +95,94 @@
         </div>
 
         <!-- Services -->
-    <div id="services">
-        <div class="container">
-            <h1 class="sub-title">
-                My Services
-            </h1>
-            <div class="services-list">
-                <div>
-                    <i class="fas fa-code"></i>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div>
-                    <i class="fas fa-crop-alt"></i>
-                    <h2>UI/UX Design</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div>
-                    <i class="fab fa-app-store"></i>
-                    <h2>App Design</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                    <a href="#">Learn More</a>
+        <div id="services">
+            <div class="container">
+                <h1 class="sub-title">
+                    My Services
+                </h1>
+                <div class="services-list">
+                    <div>
+                        <i class="fas fa-code"></i>
+                        <h2>Web Design</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div>
+                        <i class="fas fa-crop-alt"></i>
+                        <h2>UI/UX Design</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                        <a href="#">Learn More</a>
+                    </div>
+                    <div>
+                        <i class="fab fa-app-store"></i>
+                        <h2>App Design</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                        <a href="#">Learn More</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Portfolio -->
-     <div id="portfolio">
-        <div class="container">
-            <h1 class="sub-title">My Work</h1>
-            <div class="work-list">
-                <div class="work">
-                    <img src="./assets/image2.jpg" alt="">
-                    <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p> The app connects you to the talented around the world. Download it now.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+        <!-- Portfolio -->
+        <div id="portfolio">
+            <div class="container">
+                <h1 class="sub-title">My Work</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="./assets/image2.jpg" alt="">
+                        <div class="layer">
+                            <h3>Social Media App</h3>
+                            <p> The app connects you to the talented around the world. Download it now.</p>
+                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="./assets/image3.jpg" alt="">
+                        <div class="layer">
+                            <h3>Music App</h3>
+                            <p> The app connects you to the Music around the world. Download it now.</p>
+                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="./assets/image5.jpg" alt="">
+                        <div class="layer">
+                            <h3>Online Shopping App</h3>
+                            <p> The app connects you to the shopping around the world. Download it now.</p>
+                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
                     </div>
                 </div>
-                <div class="work">
-                    <img src="./assets/image3.jpg" alt="">
-                    <div class="layer">
-                        <h3>Music App</h3>
-                        <p> The app connects you to the Music around the world. Download it now.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                <a href="#" class="btn">See more</a>
+            </div>        
+        </div>
+
+        <!-- Contact -->
+        <div id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-left">
+                        <h1 class="sub-title">Contact Me</h1>
+                        <p><i class="fas fa-paper-plane"></i>contact@example.com</p>
+                        <p><i class="fas fa-phone-square-alt"></i>+91-9090928922</p>
+                        <div class="social-icons">
+                            <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
+                            <a href="#"><i class="fab fa-twitter-square"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-linkedin"></i></a>
+                        </div>
                     </div>
-                </div>
-                <div class="work">
-                    <img src="./assets/image5.jpg" alt="">
-                    <div class="layer">
-                        <h3>Online Shopping App</h3>
-                        <p> The app connects you to the shopping around the world. Download it now.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    <div class="contact-right">
+                        <form>
+                            <input type="text" name="Name" placeholder="Your Name" required>
+                            <input type="email" name="email" placeholder="Your Email" required>
+                            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                            <button type="submit">Submit</button>
+                        </form>
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
-        </div>        
-     </div>
+        </div>
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
