--- a/index.html
+++ b/index.html
@@ -171,17 +171,21 @@
                             <a href="#"><i class="fab fa-instagram"></i></a>
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                         </div>
+                        <a href="./assets/image1.jpg" download class="btn btn2">Download CV</a>
                     </div>
                     <div class="contact-right">
                         <form>
                             <input type="text" name="Name" placeholder="Your Name" required>
                             <input type="email" name="email" placeholder="Your Email" required>
                             <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                            <button type="submit">Submit</button>
+                            <button type="submit" class="btn btn2">Submit</button>
                         </form>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="copyright">
+            <p>Copyright &copy Kevin. Made with <i class="fas fa-heart"></i> by Easy Made</p>
         </div>
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
