--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <div id="header">
             <nav>
                 <img src="assets/image5.jpg" class="logo" alt="">
-                <ul>
+                <ul id="sidemenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
+                    <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
+                <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
                 <p>UI/UX Designer</p>
@@ -201,6 +203,9 @@
             document.getElementById(tabname).classList.add("active-tab");
         }
 
+    </script>
+    <script>
+        var sidemenu=document.getElementById("sidemenu");
     </script>
     </body>
 </html>
