--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <a href="./assets/image1.jpg" download class="btn btn2">Download CV</a>
                     </div>
                     <div class="contact-right">
-                        <form>
+                        <form name="submit-to-google-sheet">
                             <input type="text" name="Name" placeholder="Your Name" required>
                             <input type="email" name="Email" placeholder="Your Email" required>
                             <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
@@ -215,5 +215,16 @@
             sidemenu.style.right="-200px";
         }
     </script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycby7Ob0Ne_vEWsU0w8TBVuaMuuGC1V-M4aUnUgwNGOkl9DY-uAzGb6QnaKZxKyH0mjR6/exec'
+        const form = document.forms['submit-to-google-sheet']
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => console.log('Success!', response))
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
     </body>
 </html>
