Portfolio4 One Sixty

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                             <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                             <button type="submit" class="btn btn2">Submit</button>
                         </form>
+                        <span id="msg"></span>
                     </div>
                 </div>
             </div>
@@ -218,11 +219,17 @@
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycby7Ob0Ne_vEWsU0w8TBVuaMuuGC1V-M4aUnUgwNGOkl9DY-uAzGb6QnaKZxKyH0mjR6/exec'
         const form = document.forms['submit-to-google-sheet']
-      
+        const msg = document.getElementById("msg")
         form.addEventListener('submit', e => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => console.log('Success!', response))
+            .then(response => {
+                msg.innerHTML = "Message sent successfully"
+                setTimeout(function(){
+                    msg.innerHTML = ""
+                },5000)
+                form.reset()
+            })
             .catch(error => console.error('Error!', error.message))
         })
       </script>
